fix(SUI): add SUI logic

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,16 @@
 {
   "name": "sui-backend",
-  "version": "1.0.0",
-  "description": "Backend for SUI reward system",
+  "version": "2.0.0",
+  "description": "Backend for SUI reward system - Real blockchain transactions",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node --watch server.js"
   },
   "dependencies": {
+    "@mysten/sui": "^1.21.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2"
   }
 }
